Introduce DittoExtensionPoint to indicate extension points uniformly. Add javadoc which was missing.
Signed-off-by: David Schwilk <david.schwilk@bosch.io>